feat(Directive): appUppercase

--- a/src/app/animal/animals/animals.component.html
+++ b/src/app/animal/animals/animals.component.html
@@ -1,5 +1,6 @@
 <ul>
-  <li *ngFor="let animal of animals">
+  <li *ngFor="let animal of animals" appUppercase>
+    <img [src]="animal.picture" />
     {{ animal.name }}
   </li>
 </ul>
