feat(Pipe): date pipe

--- a/src/app/animal/animals/animals.component.html
+++ b/src/app/animal/animals/animals.component.html
@@ -2,5 +2,6 @@
   <li *ngFor="let animal of animals" appUppercase>
     <img [src]="animal.picture" />
     {{ animal.name }}
+    {{ animal.naissance | date: "shortDate" }}
   </li>
 </ul>
