feat(DataBinding): on delete method empty

--- a/src/app/animal/animal/animal.component.html
+++ b/src/app/animal/animal/animal.component.html
@@ -2,4 +2,4 @@
 <img [src]="animal?.picture" />
 {{ animal?.naissance | date: "shortDate" }}
 <p>{{ animal?.commentaire | truncate: 20:"...(more)" }}</p>
-<button (click)="onTest()">Test</button>
+<button (click)="onDelete()">Delete</button>
