--- a/src/app/animal/animal/animal.component.html
+++ b/src/app/animal/animal/animal.component.html
@@ -3,3 +3,4 @@
 {{ animal?.naissance | date: "shortDate" }}
 <p>{{ animal?.commentaire | truncate: 20:"...(more)" }}</p>
 <button (click)="onDelete()">Delete</button>
+<a [routerLink]="[animal?.id]">Voir</a>
