feat(Routage): childs

--- a/src/app/animal/animals/animals.component.html
+++ b/src/app/animal/animals/animals.component.html
@@ -3,3 +3,7 @@
     <app-animal [animal]="a" (delete)="onDelete($event)"></app-animal>
   </li>
 </ul>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
