--- a/src/app/animal/animals/animals.component.html
+++ b/src/app/animal/animals/animals.component.html
@@ -1,3 +1,5 @@
+<a routerLink="form">Créer un Animal</a>
+
 <ul>
   <li *ngFor="let a of animals">
     <app-animal [animal]="a" (delete)="onDelete($event)"></app-animal>
