--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,19 @@
-<h1>Ma super App</h1>
+<mat-toolbar color="primary">
+  <span>Animal App</span>
+</mat-toolbar>
 
-<a routerLink="/">Home Page</a>
-
-<hr />
+<nav mat-tab-nav-bar>
+  <a
+    *ngFor="let link of links"
+    [routerLink]="link.path"
+    mat-tab-link
+    routerLinkActive
+    #rla="routerLinkActive"
+    [routerLinkActiveOptions]="{ exact: link.exact }"
+    [active]="rla.isActive"
+  >
+    {{ link.label }}
+  </a>
+</nav>
 
 <router-outlet></router-outlet>
