--- a/src/app/animal/animal/animal.component.html
+++ b/src/app/animal/animal/animal.component.html
@@ -1,7 +1,22 @@
-<h2>{{ animal?.name }}</h2>
-<img [src]="animal?.picture" />
-{{ animal?.naissance | date: "shortDate" }}
-<p>{{ animal?.commentaire | truncate: 20:"...(more)" }}</p>
-<button (click)="onDelete()">Delete</button>
-<a [routerLink]="['/', 'animals', 'form', animal?.id]">Modifier</a>
-<a [routerLink]="[animal?.id]">Voir</a>
+<mat-card>
+  <mat-card-header>
+    <div
+      mat-card-avatar
+      [style.backgroundImage]="'url(' + animal?.picture + ')'"
+    ></div>
+    <mat-card-title>{{ animal?.name }}</mat-card-title>
+    <mat-card-subtitle>{{ animal?.espece }}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image [src]="animal?.picture" [alt]="animal?.name" />
+  <mat-card-content>
+    <p>
+      {{ animal?.commentaire }}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <a mat-button (click)="onDelete()"> Supprimer </a>
+    <a mat-button [routerLink]="['/', 'animals', 'form', animal?.id]">
+      Modifier
+    </a>
+  </mat-card-actions>
+</mat-card>
