--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Animal App</span>
+  <span>{{ "nav.title" | translate }}</span>
   <span class="spacer"></span>
   <button mat-icon-button [matMenuTriggerFor]="menuLang">
     <mat-icon>language</mat-icon>
