feat(i18n): inside animal module

--- a/src/app/animal/animals/animals.component.html
+++ b/src/app/animal/animals/animals.component.html
@@ -5,7 +5,9 @@
 
   <div>
     <mat-nav-list>
-      <div mat-subheader>Animaux</div>
+      <div mat-subheader>
+        {{ "pages.animals.subheader" | translate }}
+      </div>
       <a
         mat-list-item
         *ngFor="let a of animals"
